# comp371-team-assignment

./: .gitignore
Assignment1/: CMakeLists.txt
